# archon

./: .env.example  .gitignore  IDEAS.md  README.md  pyproject.toml
archon/: __init__.py  agent.py  cloud.py  experiment.py  llm.py  memory.py  sandbox.py  security.py  spec.py
policies/: deploy.openshell.yaml
scripts/: poc_all_sponsors.py
tests/: test_agent.py  test_cloud.py  test_experiment.py  test_llm.py  test_memory.py  test_sandbox.py  test_scripts.py  test_security.py  test_spec.py
