[project]
name = "archon"
version = "0.1.0"
description = "Solutions-architect agent that converges on measured cost/perf targets and learns per-environment calibration"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
live = ["httpx>=0.27"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archon"]
